@@ -109,6 +109,8 @@ Release 0.20.3 - Unreleased
                via Andrew Purtell)
    HBASE-2133  Increase default number of client handlers
    HBASE-2149  hbase.regionserver.global.memstore.lowerLimit is too low
+   HBASE-2157  LATEST_TIMESTAMP not replaced by current timestamp in KeyValue
+               (bulk loading)
 
   NEW FEATURES
    HBASE-1961  HBase EC2 scripts
